# panelAlarm

./: .gitignore  CMakeLists.txt  MainSketch.ino  TODO.md  panelAlarm_HID.ino  rework.ino
Button/: ButtonAdapter.cpp  ButtonAdapter.h  ButtonAdapterInterface.h  ButtonManager.cpp  ButtonManager.h  ButtonManagerInterface.h
Common/: CommonTypes.cpp  CommonTypes.h  Constants.h  Definitions.h  TimeHelpers.h
Display/: DisplayAdapter.cpp  DisplayAdapter.h  DisplayAdapterInterface.h  DisplayInterface.h  DisplayManager.cpp  DisplayManager.h  DisplayManagerInterface.h
Documentation/: PanelAlarm System and Test Diagram.drawio.html
Logger/: DebugLogger.cpp  DebugLogger.h  Logger.cpp  Logger.h  LoggerHelpers.h  SystemLogger.cpp  SystemLogger.h
Support/: ButtonAdapterMock.h  ButtonManagerMock.h  DisplayAdapterMock.h  DisplayManagerMock.h  LoggerFake.h
SystemHarnesses/: SystemHarness.cpp  SystemHarness.h  SystemHarnessInterface.h  SystemTestHarness.cpp  SystemTestHarness.h
Tests/: ButtonManagerTest.cpp
Timer/: Timer.cpp  Timer.h
